panschema/src/snapshots/panschema__components__tests__snapshots__snapshot_slot_card_minimal.snap
---
source: panschema/src/components.rs
assertion_line: 1436
expression: html
---
<article class="entity-card slot-card" id="slot-relates-to">
    <header class="entity-header">
        <div class="entity-badge slot-badge">Slot</div>
        <h3 class="entity-title">relatesTo</h3>
        <button class="copy-btn" data-copy="https://example.org/ontology#relatesTo" title="Copy IRI">
            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
            </svg>
        </button>
    </header>

    <div class="entity-iri">
        <code class="mono">https://example.org/ontology#relatesTo</code>
    </div>

    <div class="entity-details">
    </div>
</article>
<style>
    .slot-badge {
        background-color: color-mix(in srgb, var(--color-property) 15%, transparent);
        color: var(--color-property);
    }

    .datatype-ref {
        color: var(--color-datatype);
    }

    .rule-list {
        list-style: none;
        padding: 0;
        margin: 0;
    }

    .rule-entry + .rule-entry {
        margin-top: var(--space-3);
        padding-top: var(--space-3);
        border-top: 1px solid color-mix(in srgb, var(--color-border) 60%, transparent);
    }

    .rule-title {
        font-weight: 500;
    }

    .rule-description,
    .rule-summary {
        margin-top: var(--space-1);
        font-size: var(--text-sm);
        color: var(--color-text-muted);
    }

    .rule-summary code,
    .rule-description code {
        font-size: var(--text-sm);
        color: var(--color-text);
    }

    .governing-rule-group-rules {
        margin-top: var(--space-1);
        padding-left: var(--space-4);
    }

    .governing-rule-group + .governing-rule-group {
        margin-top: var(--space-3);
        padding-top: var(--space-3);
        border-top: 1px solid color-mix(in srgb, var(--color-border) 60%, transparent);
    }

    .any-of-sep {
        color: var(--color-text-muted);
        font-size: var(--text-xs);
        font-style: italic;
    }

    .datatype-ref:hover {
        background-color: color-mix(in srgb, var(--color-datatype) 10%, transparent);
    }

    .characteristics {
        display: flex;
        flex-wrap: wrap;
        gap: var(--space-2);
    }

    .characteristic-badge {
        display: inline-flex;
        padding: var(--space-1) var(--space-2);
        font-size: var(--text-xs);
        font-weight: 500;
        color: var(--color-text-muted);
        background-color: var(--color-bg-tertiary);
        border-radius: var(--radius-sm);
    }
</style>
