panschema/src/snapshots/panschema__components__tests__snapshots__snapshot_type_card_full.snap
---
source: panschema/src/components.rs
expression: html
---
<article class="entity-card type-card" id="type-phone-number">
    <header class="entity-header">
        <div class="entity-badge type-badge">Type</div>
        <h3 class="entity-title">PhoneNumber</h3>
    </header>

    <div class="entity-description">A phone number in E.164 form.</div>

    <div class="entity-details">
        <div class="detail-row">
            <dt>Type of</dt>
            <dd>
                <a href="#type-string" class="entity-ref type-ref">string</a>
            </dd>
        </div>
        <div class="detail-row">
            <dt>URI</dt>
            <dd>
                <a href="http://www.w3.org/2001/XMLSchema#string" class="entity-iri-link" target="_blank" rel="noopener" title="xsd:string = http://www.w3.org/2001/XMLSchema#string"><code class="mono">xsd:string</code></a>
            </dd>
        </div>
        <div class="detail-row">
            <dt>Pattern</dt>
            <dd><code class="mono pattern-value" title="^\+[1-9]\d{1,14}$">^\+[1-9]\d{1,14}$</code></dd>
        </div>
    </div>
</article>
<style>
    .type-badge {
        background-color: color-mix(in srgb, var(--color-type) 15%, transparent);
        color: var(--color-type);
    }

    .type-ref {
        color: var(--color-type);
    }
</style>
